@@ -23,6 +23,6 @@
 #ifndef _netxmsdb_h
 #define _netxmsdb_h
 
-#define DB_FORMAT_VERSION   459
+#define DB_FORMAT_VERSION   460
 
 #endif
