@@ -330,6 +330,8 @@ CREATE TABLE nodes
   port_rows integer null,
   port_numbering_scheme integer null,
   agent_comp_mode char(1) not null, // compression mode for agent
+  fail_time_snmp integer not null,
+  fail_time_agent integer not null,
   PRIMARY KEY(id)
 ) TABLE_TYPE;
 
