@@ -23,6 +23,7 @@
 - Fixed mail sender address encoding
 - Fixed bug with lost agent connectivity after tunnel reconnect
 - Zone ID now referenced as Zone UIN (unique identification number) to avoid confusion with zone object ID
+- Fixed bug with not generated xx_UNREACHABLE events after server restart
 - NXSL:
 	- New class "InetAddress"
 	- New attribute "ipAddressList" for class "Interface"
